Changed the Title for Contact Page

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Contact Page</title>
+    <title>Contact Ayjemal</title>
     <meta charset="utf-8" />
     <title>My first Website</title>
     <link rel="stylesheet" href="img/wikipedia.ico" />
