Changed title for About Page

--- a/about.html
+++ b/about.html
@@ -1,8 +1,7 @@
 <html>
   <head>
-    <title>About Page</title>
+    <title>About Page for Ayjemal</title>
     <meta charset="utf-8" />
-    <title>My first Website</title>
     <link rel="stylesheet" href="img/wikipedia.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
