--- a/about.html
+++ b/about.html
@@ -41,20 +41,25 @@
         <tr>
           <td>HTML</td>
           <td>1</td>
-          <td>Beginner</td>
+          <td>Intermediate</td>
         </tr>
         <tr>
           <td>CSS</td>
           <td>1</td>
-          <td>Beginner</td>
+          <td>Intermediate</td>
         </tr>
         <tr>
           <td>JavaScript</td>
           <td>1</td>
-          <td>Beginner</td>
+          <td>Intermediate</td>
         </tr>
         <tr>
           <td>Python</td>
+          <td>2</td>
+          <td>Advanced</td>
+        </tr>
+        <tr>
+          <td>SQL</td>
           <td>2</td>
           <td>Intermediate</td>
         </tr>
@@ -67,8 +72,6 @@
       <ul style="list-style-type:none;">
         <li>Front-end development</li>
         <li>Back-end development</li>
-        <li>Test driven development</li>
-        <li>Climbing</li>
       </ul>
       <a href="files/cv.pdf" class="button" download>Download my CV</a>
       <br/>
@@ -675,10 +678,9 @@
     <br />
     <br />
     <div>
-      <span
-        >Welcome to my About Me page. My name is Ayjemal. I happy you decided to
-        know more about my web development portfolio.</span
-      >
+      <span>
+        Welcome to my About Me page. My name is Ayjemal. I happy you decided to
+        know more about my web development portfolio.</span>
       <p>
         Some personal facts about me: I love playing volleyball, tennis and
         board games.
