--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
         </ul>
      </nav>
     </header>
-    <a href="#">Default Link</a>
-    <button type="button">Default Button</button>
-    <button class="button__secondary">Secondary Button</button>
     <div class="profile">
       <img src="img/ayjemalg.jpeg" class="profile__portrait" alt="Ayjemal Gurbankulyyeva Portrait">
       <h1>Hello World!</h1>
@@ -40,7 +37,7 @@
         OR
       </p>
       <p>
-        <a href="#">Check out some of my code</a>
+        <a href="https://github.com/Ayjemal07">Check out some of my code</a>
       </p>
     </div>
     <br>
