--- a/work.html
+++ b/work.html
@@ -35,48 +35,47 @@
         <h1>Work</h1>
         <div class="grid">
             <div class="grid__item">
-                <h2>Mobile web app</h2>
+                <h2>Amazon Replica website</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It's written in React.js. Additionally,
-                    I've created the HTML and CSS templates.
+                    Within this project, I recreated the Amazon sign-in page using HTML and CSS. 
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/Ayjemal07/amazon-sign-replica">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Native MacOs Application</h2>
+                <h2>Theatre Company Project</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It's written in JavaFX.
+                    In this project, I have create a mock-up for Griot Theatre Company using advanced HTML and CSS. I utilized Flexbox, Css Grid and Bootstrap to achieve responsive page.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/Ayjemal07/griot-theathre-mockup">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>NodeJs PDF generation </h2>
+                <h2>Movie Website Application </h2>
                 <p>
-                    Within this project, I created a project that generates pdf out of web pages with the help of a
-                    node.js server.
+                    In this project, I developed a web app that communicates with a server, making API calls to retrieve movie data. The implementation achieves dynamic content updates, utilizing Express.js for streamlined routing and Morgan for comprehensive request logging.
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/Ayjemal07/movie_api">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Style Guide for portfolio page</h2>
+                <h2>Pokemon Application</h2>
                 <p>
-                    Here you can find the style guide I have created for this portfolio page.
+                    In this application, I developed a responsive Pokedex web app using HTML, CSS, and JavaScript, integrated with a RESTful API for dynamic Pokemon data retrieval. Employed asynchronous JavaScript for optimized user experience. 
+                    The code includes the use of Bootstrap for styling and jQuery for DOM manipulation.
                 </p>
-                <a href="#">See styleguide</a>
+                <a href="https://github.com/Ayjemal07/first-js-project">See the project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Medium Blog </h2>
+                <h2>Active Leet Coder </h2>
                 <p>
-                    I am also on medium.com about React.js.
+                    I am an active leetcoder since 2022 with over 100 submissions solving the most complex and challenging algorithm and data structure questions. 
                 </p>
-                <a href="#">Read my latest blogpost</a>
+                <a href="https://leetcode.com/yaltagul">Check out my profile</a>
             </div>
             <div class="grid__item">
                 <h2>Your project?</h2>
                 <p>
                     I can help you with both back and front end development.
                 </p>
-                <a href="#">Contact me</a>
+                <a href="contact.html">Contact me</a>
             </div>
         </div>
     </section>
